; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_egl_context.c__glfwPlatformGetProcAddress.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_egl_context.c__glfwPlatformGetProcAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_glfwPlatformGetProcAddress(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = call %struct.TYPE_5__* (...) @_glfwPlatformGetCurrentContext()
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @_glfw_dlsym(i64 %16, i8* %17)
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %12
  %23 = load i64, i64* %5, align 8
  store i64 %23, i64* %2, align 8
  br label %28

24:                                               ; preds = %12
  br label %25

25:                                               ; preds = %24, %1
  %26 = load i8*, i8** %3, align 8
  %27 = call i64 @_glfw_eglGetProcAddress(i8* %26)
  store i64 %27, i64* %2, align 8
  br label %28

28:                                               ; preds = %25, %22
  %29 = load i64, i64* %2, align 8
  ret i64 %29
}

declare dso_local %struct.TYPE_5__* @_glfwPlatformGetCurrentContext(...) #1

declare dso_local i32 @_glfw_dlsym(i64, i8*) #1

declare dso_local i64 @_glfw_eglGetProcAddress(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
